if(${CMAKE_PROJECT_NAME}_HAVE_ITK)
	add_subdirectory(vAlign2D)
	add_subdirectory(vDoTrans2D)
	add_subdirectory(vAlign3D)
	add_subdirectory(vDoTrans3D)
	add_subdirectory(isisCheckerboard3D)
	#add_subdirectory(isisDoTrans3D_float)
endif(${CMAKE_PROJECT_NAME}_HAVE_ITK)

#add_subdirectory(isisDoTrans3D_float)
#add_subdirectory(isisKaltmacher)

if(${CMAKE_PROJECT_NAME}_HAVE_QT4)
	add_subdirectory(isisPropertyViewer)
endif(${CMAKE_PROJECT_NAME}_HAVE_QT4)
